--- a/app/src/main/res/layout/my_produce_list_item.xml
+++ b/app/src/main/res/layout/my_produce_list_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/margin_10"
     android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp">
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="@dimen/dimen_10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
