--- a/app/src/main/res/drawable/ic_dashboard_bg.xml
+++ b/app/src/main/res/drawable/ic_dashboard_bg.xml
@@ -5,12 +5,12 @@
     android:viewportHeight="151">
   <group>
     <clip-path
-        android:pathData="M0,0h350v151h-350z"/>
+        android:pathData="M3,0L347,0A3,3 0,0 1,350 3L350,148A3,3 0,0 1,347 151L3,151A3,3 0,0 1,0 148L0,3A3,3 0,0 1,3 0z"/>
     <path
-        android:pathData="M0,0h350v151h-350z"
+        android:pathData="M0,0H350V151H0Z"
         android:fillColor="#557f5f"/>
     <path
-        android:pathData="M0,151s55.333,-65.114 78,-68.333c38.667,-12.114 97.167,57.362 164.667,40s26,-68.667 107.333,-82S350,151 350,151L0,151Z"
+        android:pathData="M0,151s55.333,-65.114 78,-68.333c38.667,-12.114 97.167,57.362 164.667,40s26,-68.667 107.333,-82S350,151 350,151Z"
         android:strokeAlpha="0.45"
         android:fillColor="#32573b"
         android:fillAlpha="0.45"/>
