--- a/app/src/main/res/layout/fragment_my_produce.xml
+++ b/app/src/main/res/layout/fragment_my_produce.xml
@@ -11,6 +11,8 @@
         android:id="@+id/recyclerView_my_produce_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="?actionBarSize"
+        android:layout_marginTop="@dimen/dimen_10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
