--- a/app/src/main/res/layout/wallet_add_money.xml
+++ b/app/src/main/res/layout/wallet_add_money.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="500dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:fitsSystemWindows="true"
     android:background="@drawable/solidwhite_shape"
+    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".activities.wallet.WalletHomeActivity">
+
+    <ImageView
+        android:id="@+id/wallet_transfer_money_close"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/close" />
 
     <LinearLayout
         android:id="@+id/layout_add_money"
@@ -20,39 +30,35 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:paddingLeft="@dimen/dimen_30dp"
-            android:textStyle="bold"
-            android:textSize="25dp"
             android:text="Deposit Money"
-            />
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="60dp"
-        android:paddingRight="@dimen/dimen_20dp"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/dimen_20dp"
-        >
+        android:paddingRight="@dimen/dimen_20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
             android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingTop="@dimen/margin_10"
-            android:paddingBottom="10dp"
-            android:paddingLeft="20dp">
+            android:paddingTop="@dimen/margin_10">
 
             <TextView
                 android:id="@+id/text_view_error_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
                 android:gravity="center"
                 android:text="Insufficient Funds!"
                 android:textColor="@color/device_problem"
-                android:fontFamily="@font/josefin_sans"
                 android:visibility="gone" />
 
             <LinearLayout
@@ -67,16 +73,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="Receiver Number"
-                    android:textSize="@dimen/margin_16"
                     android:fontFamily="@font/josefin_sans"
-                    />
+                    android:text="Receiver Number"
+                    android:textSize="@dimen/margin_16" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="@dimen/margin_10"
+                    android:orientation="horizontal"
                     android:padding="0dp">
 
                     <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
@@ -106,90 +111,91 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefin_sans"
                     android:text="Amount"
-                    android:textSize="@dimen/margin_16"
-                    android:fontFamily="@font/josefin_sans" />
+                    android:textSize="@dimen/margin_16" />
 
                 <EditText
                     android:id="@+id/crop_add_money_amount"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:hint="e.g 40,000"
-                    android:background="@drawable/edittext_corner"
-                    android:textSize="14dp"
                     android:layout_marginTop="@dimen/margin_10"
+                    android:background="@drawable/edittext_corner"
+                    android:hint="e.g 40,000"
                     android:inputType="numberDecimal"
                     android:paddingLeft="@dimen/dimen_15sp"
-                    />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
-                android:paddingRight="@dimen/dimen_10dp"
-                android:layout_marginBottom="5dp"
-                android:visibility="gone"
                 android:layout_marginTop="@dimen/margin_10"
-                android:background="@drawable/rounded_corners_button">
+                android:layout_marginRight="@dimen/margin_10"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/rounded_corners_button"
+                android:gravity="right"
+                android:paddingRight="@dimen/dimen_10dp"
+                android:visibility="gone">
+
                 <Button
+                    style="@style/Button_DW"
                     android:layout_width="match_parent"
                     android:layout_height="40dip"
-                    android:background="@color/transparent"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size"
-                    style="@style/Button_DW"
+                    android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/withdraw"
                     android:textAllCaps="false"
-                    />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
+
                 <ImageView
                     android:layout_width="30dip"
                     android:layout_height="30dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_margin="10dip"
                     android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
                     android:src="@drawable/ic_right_arrow">
 
                 </ImageView>
 
             </FrameLayout>
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:layout_marginLeft="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
-                android:paddingRight="@dimen/dimen_10dp"
                 android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_corners_button">
+                android:background="@drawable/rounded_corners_button"
+                android:gravity="right">
+
                 <Button
                     android:id="@+id/button_add_money"
+                    style="@style/Button_DW"
                     android:layout_width="match_parent"
                     android:layout_height="40dip"
-                    android:background="@color/transparent"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size"
-                    style="@style/Button_DW"
+                    android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/add_money"
                     android:textAllCaps="false"
-                    />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/button_text_size" />
+
                 <ImageView
                     android:layout_width="30dip"
                     android:layout_height="30dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_margin="10dip"
                     android:layout_gravity="right|center_vertical"
+                    android:layout_margin="10dip"
                     android:src="@drawable/ic_right_arrow">
 
                 </ImageView>
@@ -202,32 +208,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:paddingEnd="20dp"
+            android:paddingRight="20dp"
             android:paddingBottom="6dp"
-            android:visibility="gone"
-            android:paddingRight="20dp">
+            android:visibility="gone">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Balance"
-                android:textStyle="bold"
                 android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp" />
+                android:layout_marginRight="6dp"
+                android:text="My Balance"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="UGX"
-                android:textSize="11sp"
                 android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp" />
+                android:layout_marginRight="4dp"
+                android:text="UGX"
+                android:textSize="11sp" />
+
             <TextView
                 android:id="@+id/crop_add_money_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"/>
+                android:text="0" />
         </LinearLayout>
     </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
